<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mowbot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nguyenhatrung411@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>tf2_ros</depend>
  <depend>swri_transform_util</depend>
  
  <!-- <depend>mapviz</depend> -->
  <!-- <depend>mapviz_plugins</depend> -->
  <!-- <depend>tile_map</depend> -->
  <!-- <depend>multires_image</depend> -->

  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>twist_mux</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>foxglove_bridge</depend>
  <depend>robot_localization</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
